--- a/hiera.yaml
+++ b/hiera.yaml
@@ -8,5 +8,5 @@ hierarchy:
   - name: "Yaml backend"
     data_hash: yaml_data
     paths:
-      - "hieradata/clientcerts/%{trusted.certname}.yaml"
+      - "hieradata/clientcerts/%{fqdn}.yaml"
       - "common.yaml"
