--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,11 +2,11 @@
 version: 5
 
 defaults:
-  datadir: "data"
+  datadir: "hieradata"
 
 hierarchy:
   - name: "Yaml backend"
     data_hash: yaml_data
     paths:
-      - "/hieradata/clientcerts/%{fqdn}.yaml"
+      - "/clientcerts/%{fqdn}.yaml"
       - "common.yaml"
