--- a/environment.conf
+++ b/environment.conf
@@ -1,2 +1,2 @@
-modulepath     = contol-repo/modules:$basemodulepath
+modulepath     = modules:$basemodulepath
 config_version = 'scripts/config_version.sh $environmentpath $environment'
