--- a/data/nodes/host1.mllab.yaml
+++ b/data/nodes/host1.mllab.yaml
@@ -1,5 +1,4 @@
 ---
 role: role::webserver
   # This is used to overwrite default values in modules...
-motd:
-  content: "This system is managed by Puppet using the dev branch and pulling data from yaml.\n"
+motd_content: "This system is managed by Puppet using the dev branch and pulling data from yaml.\n"
