--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,2 +1,3 @@
 ---
-message: "This node is using common data"
+profile::base::ntp_server: "0.uk.pool.ntp.org"
+profile::motd::content: "This instance is managent by Puppet./n"
