--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,3 +1,3 @@
 ---
 profile::base::ntp_server: "0.uk.pool.ntp.org"
-profile::motd::content: "This instance is managent by Puppet./n"
+profile::motd::content: "This instance: %{facts.networking.fqdn} is managent by Puppet./n"
