--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,3 +1,4 @@
 ---
 profile::base::ntp_server: "0.uk.pool.ntp.org"
 profile::motd::content: "This instance: %{facts.networking.fqdn} is managent by Puppet./n"
+message: "This node is called: %{facts.networking.fqdn} from common.yaml"
