--- a/data/hosts/host1.mllab.yaml
+++ b/data/hosts/host1.mllab.yaml
@@ -1,3 +1,3 @@
 ---
-#profile::base::ntp_server: "server 2.uk.pool.ntp.org"
-#profile::motd::content: "This node is called: %{facts.networking.fqdn} from hosts .yaml file. /n"
+profile::base::ntp_server: "server 2.uk.pool.ntp.org"
+profile::motd::content: "This node is called: %{facts.networking.fqdn} from hosts .yaml file. /n"
