--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,4 +1,4 @@
 ---
 profile::ntp::servers:
-  - 'server 0.uk.pool.ntp.org', 'server 1.uk.pool.ntp.org', 'server 2.uk.pool.ntp.org' , 'server 3.uk.pool.ntp.org'
+  - [ 'server 0.uk.pool.ntp.org', 'server 1.uk.pool.ntp.org', 'server 2.uk.pool.ntp.org' , 'server 3.uk.pool.ntp.org' ]
 #profile::motd::content: "This instance: %{facts.networking.fqdn} is managed by Puppet. /n"
