--- a/data/nodes/host1.mllab.yaml
+++ b/data/nodes/host1.mllab.yaml
@@ -1,3 +1,4 @@
 ---
-profile::base::ntp_server: "server 2.uk.pool.ntp.org"
+ntp_servers:
+  - ["server 0.uk.pool.ntp.org", "server 1.uk.pool.ntp.org", "server 2.uk.pool.ntp.org" , "server 3.uk.pool.ntp.org"]
 #profile::motd::content: "This node is called: %{facts.networking.fqdn} from hosts .yaml file. /n"
