--- a/hiera.yaml
+++ b/hiera.yaml
@@ -8,5 +8,5 @@ hierarchy:
   - name: "Yaml backend"
     data_hash: yaml_data
     paths:
-      - "nodes/%{facts.networking.fqdn}.yaml"
+      - "nodes/%{hostname}.yaml"
       - "common.yaml"
