--- a/data/nodes/host1.yaml
+++ b/data/nodes/host1.yaml
@@ -1,4 +1,3 @@
 ---
-ntp_servers:
-  - ["server 0.uk.pool.ntp.org", "server 1.uk.pool.ntp.org", "server 2.uk.pool.ntp.org" , "server 3.uk.pool.ntp.org"]
+profile::ntp::servers: [ '0.uk.pool.ntp.org', '1.uk.pool.ntp.org', '2.uk.pool.ntp.org' , '3.uk.pool.ntp.org' ]
 #profile::motd::content: "This node is called: %{facts.networking.fqdn} from hosts .yaml file. /n"
