--- a/data/nodes/host1.mllab.yaml
+++ b/data/nodes/host1.mllab.yaml
@@ -1,3 +1,4 @@
 ---
+role: webserver
 profile::ntp::servers: [ '0.uk.pool.ntp.org', '1.uk.pool.ntp.org', '2.uk.pool.ntp.org' , '3.uk.pool.ntp.org' ]
 #profile::motd::content: "This node is called: %{facts.networking.fqdn} from hosts .yaml file. /n"
