--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,4 +1,3 @@
 ---
 #profile::motd::content: "This instance: %{facts.networking.fqdn} is managed by Puppet. /n"
-
-profile::motd::content: "This machine is: %{facts.networking.fqdn}"
+profile::ntp::servers: [ '0.uk.pool.ntp.org', '1.uk.pool.ntp.org', '2.uk.pool.ntp.org' , '3.uk.pool.ntp.org' ]
