--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,3 +1,3 @@
 ---
-profile::motd::content: "This instance: %{facts.networking.fqdn} is managed by Puppet. common.yaml/n"
+#profile::motd::content: "This instance: %{facts.networking.fqdn} is managed by Puppet. common.yaml/n"
 profile::ntp::servers: [ '0.uk.pool.ntp.org', '1.uk.pool.ntp.org', '2.uk.pool.ntp.org' , '3.uk.pool.ntp.org' ]
