--- a/data/nodes/host1.mllab.yaml
+++ b/data/nodes/host1.mllab.yaml
@@ -2,3 +2,4 @@
 role: webserver
 
 profile::motd::content: "This node: %{facts.networking.fqdn} is manged by Puppet! \n"
+class { ['profile::fw::pre', 'profile::fw::post']: }
