--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,3 +1,4 @@
 ---
+message: "This node is using common data"
 # profile::motd::content: "This node: %{facts.networking.fqdn} is manged by Puppet! \n"
 profile::ntp::servers: [ '0.uk.pool.ntp.org', '1.uk.pool.ntp.org', '2.uk.pool.ntp.org' , '3.uk.pool.ntp.org' ]
