--- a/data/nodes/host1.mllab.yaml
+++ b/data/nodes/host1.mllab.yaml
@@ -1,8 +1,9 @@
 ---
 role: webserver
 
-profile::motd::content: "This node: %{facts.networking.fqdn} is manged by Puppet! \n"
+#profile::motd::content: "This node: %{facts.networking.fqdn} is manged by Puppet! \n"
 
+# apache config
 apache_vhost: mllab
 docroot: /var/www/html
 docroot_path: /var/www/html/index.html
