--- a/site-modules/profile/.puppet-lint.rc
+++ b/site-modules/profile/.puppet-lint.rc
@@ -2,4 +2,4 @@
 --no-140chars-check
 --no-documentation-check
 --no-star_comments-check
---no-double_quoted_strings-check
+--no-double_quoted_strings-check /profile/templates/web_content.epp
